[package]
name = "blessed_wm"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary
opt-level = "z"   # Optimize for size.
lto = true        # Link Time Optimization
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort" #removes the need for this extra unwinding code on panic

[dependencies]
penrose = { version = "0.2.1", features = ["x11rb-xcb", "xcb_draw"] }
simplelog = "0.12.0"
x11rb = "0.8.1"